Made the "Join our Discord" link more visible in dark mode

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             color: var(--link-color);
             transition: color 0.3s;
         }
+        .discord-link a {
+            color: var(--link-color);
+            text-decoration: none;
+            transition: color 0.3s;
+        }
         .discord-logo {
             width: 24px;
             height: 24px;
