--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     </div>
     
     <div class="container squadron-info">
+        <div id="squadron-activity">Loading squadron activity...</div>
         <h3>Motto: "Klotzen, nicht kleckern" -Heinz Guderian</h3>
         <p>2.Panzergruppe- historically most accurate German bias house in WT</p>
         <p>46AK, 24AK, 47AK squadrons</p>
@@ -162,6 +163,24 @@
     <div id="latest-commit">Loading latest commit...</div>
 
     <script>
+        async function fetchSquadronActivity() {
+            try {
+                const response = await fetch('https://warthunder.com/en/community/claninfo/XXIVAK%20mot-2PzGr');
+                const text = await response.text();
+                const parser = new DOMParser();
+                const doc = parser.parseFromString(text, 'text/html');
+                const activityElement = doc.querySelector('.squadrons-counter__value');
+                if (activityElement) {
+                    const activity = activityElement.textContent.trim();
+                    document.getElementById('squadron-activity').innerHTML = `Squadron Activity: ${activity}`;
+                } else {
+                    document.getElementById('squadron-activity').innerHTML = 'Failed to load squadron activity';
+                }
+            } catch (error) {
+                document.getElementById('squadron-activity').innerHTML = 'Failed to load squadron activity';
+            }
+        }
+
         async function fetchLatestCommit() {
             try {
                 const response = await fetch('https://api.github.com/repos/cat768/24ak-squadron-countdown/commits');
@@ -235,6 +254,7 @@
         setInterval(updateCountdown, 1000);
         updateCountdown();
         fetchLatestCommit();
+        fetchSquadronActivity();
     </script>
 </body>
 </html>
