Attempt to fix load squadron activity

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     
     <div class="container squadron-info">
-        <div id="squadron-activity">Loading squadron activity...</div>
+        <h1 id="squadron-activity">Loading squadron activity...</h1>
         <h3>Motto: "Klotzen, nicht kleckern" -Heinz Guderian</h3>
         <p>2.Panzergruppe- historically most accurate German bias house in WT</p>
         <p>46AK, 24AK, 47AK squadrons</p>
