--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p>46AK, 24AK, 47AK squadrons</p>
         <p>Joining our Discord is mandatory for membership.</p>
         <div class="link">
-            <img src="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/3.0.1/globe.svg" alt="Squadron Profile logo" class="link-logo profile-logo">
+            <img src="https://wiki.warthunder.com/images/f/f8/Icons_War_Thunder.png" alt="Squadron Profile logo" class="link-logo profile-logo">
             <a href="https://warthunder.com/en/community/claninfo/XXIVAK%20mot-2PzGr" target="_blank">Squadron Profile</a>
         </div>
         <div class="link">
